Fixed spacing of glossary terms, fixed the spacing between the title and content of connect the concepts features

--- a/css/ccap-psychology.less
+++ b/css/ccap-psychology.less
@@ -598,11 +598,17 @@ div.cnx-eoc > .title {
 /******************************************************
  * Key Terms
  ******************************************************/
-.glossary dl {
-  margin: 1em 0;
+.glossary {
+  dl {
+    margin: 1em 0;
+  }
+  dd {
+    margin-left: 0px;
+  }
 }
-.glossary dd {
-  margin-left: 0px;
+
+div.book div.chapter div.titlepage > div > div > h2.title {
+    margin-bottom: 1em;
 }
 
 /**
@@ -620,7 +626,7 @@ div.cnx-eoc > .title {
 div.book div.chapter > div.glossary dd::after {
   display: inherit;
   white-space: pre; 
-  content: '\A';
+  content: '\A\A';
 }
 
 .cnx-eoc .title {
@@ -730,11 +736,8 @@ div.book div.chapter > div.glossary dd::after {
       padding: 0px !important;
       p {
         padding: 0 20px;
-        &:first-of-type {
-          padding-top: 10px;
-        }
         &:last-of-type {
-          padding-bottom: 20px;
+          padding-bottom: 10px;
         }
       }
       // paragraph titles
